--- a/index.html
+++ b/index.html
@@ -113,6 +113,24 @@
         available: true,
       },
       {
+        id: 'pokemon-multiply',
+        title: 'Pokemon Multiply',
+        icon: '⚡',
+        ages: 'Ages 6+',
+        description: 'Master multiplication with Pokemon battles!',
+        path: 'games/pokemon-multiply/index.html',
+        available: true,
+      },
+      {
+        id: 'mario-bros',
+        title: 'Super Mario Bros',
+        icon: '🍄',
+        ages: 'Ages 6+',
+        description: 'A classic platformer adventure with Mario & Luigi!',
+        path: 'games/mario-bros/index.html',
+        available: true,
+      },
+      {
         id: 'shape-explorer',
         title: 'Shape Explorer',
         icon: '🔷',
