--- a/games/mario-bros/index.html
+++ b/games/mario-bros/index.html
@@ -108,11 +108,19 @@
     </div>
   </div>
 
+  <link rel="stylesheet" href="../../shared/css/profile.css">
+
+  <!-- Supabase CDN (optional, graceful if blocked) -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <!-- Shared JS -->
   <script src="../../shared/js/utils.js"></script>
   <script src="../../shared/js/audio.js"></script>
   <script src="../../shared/js/particles.js"></script>
   <script src="../../shared/js/storage.js"></script>
+  <script src="../../shared/js/supabase-sync.js"></script>
+  <script src="../../shared/js/profile.js"></script>
+  <script>Profile.autoInit();</script>
 
   <!-- Game JS -->
   <script src="sprites.js"></script>
