--- a/games/pokemon-multiply/index.html
+++ b/games/pokemon-multiply/index.html
@@ -210,11 +210,19 @@
 
   </div>
 
+  <link rel="stylesheet" href="../../shared/css/profile.css">
+
+  <!-- Supabase CDN (optional, graceful if blocked) -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <script src="../../shared/js/utils.js"></script>
   <script src="../../shared/js/audio.js"></script>
   <script src="../../shared/js/particles.js"></script>
   <script src="../../shared/js/storage.js"></script>
+  <script src="../../shared/js/supabase-sync.js"></script>
+  <script src="../../shared/js/profile.js"></script>
   <script src="../../shared/js/adaptive.js"></script>
+  <script>Profile.autoInit();</script>
 
   <script src="pokemon-data.js"></script>
   <script src="levels.js"></script>
