--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="shared/css/profile.css">
   <link rel="stylesheet" href="shared/css/dashboard.css">
   <style>
+    html, body {
+      overflow: auto;
+    }
+
     .launcher {
       min-height: 100%;
       background: linear-gradient(135deg, #1a0a2e, #16213e, #1a0a2e);
