--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="shared/css/components.css">
   <style>
     .launcher {
-      min-height: 100%;
+      height: 100%;
       background: linear-gradient(135deg, #1a0a2e, #16213e, #1a0a2e);
       display: flex;
       flex-direction: column;
@@ -128,6 +128,15 @@
         ages: 'Ages 6+',
         description: 'A classic platformer adventure with Mario & Luigi!',
         path: 'games/mario-bros/index.html',
+        available: true,
+      },
+      {
+        id: 'voice-tutor',
+        title: 'Voice Tutor',
+        icon: '👩‍🏫',
+        ages: 'Ages 6+',
+        description: 'Practice English speaking with an AI tutor!',
+        path: 'games/voice-tutor/index.html',
         available: true,
       },
       {
