--- a/games/voice-tutor/index.html
+++ b/games/voice-tutor/index.html
@@ -62,12 +62,22 @@
       <div class="theme-selector hidden">
         <h3 class="theme-title">Pick a Theme</h3>
         <div class="theme-chips">
-          <button class="chip" data-theme="animals">🐾 Animals</button>
-          <button class="chip" data-theme="food">🍎 Food</button>
-          <button class="chip" data-theme="colors">🎨 Colors</button>
-          <button class="chip" data-theme="body">🦶 Body</button>
-          <button class="chip" data-theme="family">👨‍👩‍👧 Family</button>
-          <button class="chip" data-theme="school">🏫 School</button>
+          <button class="chip" data-theme="nouns">🎒 Classroom</button>
+          <button class="chip" data-theme="verbs">🏃 Actions</button>
+          <button class="chip" data-theme="adjectives">🎨 Colors & Sizes</button>
+          <button class="chip" data-theme="phrases">👋 Phrases</button>
+        </div>
+      </div>
+
+      <!-- Conversation topic sub-selector (hidden until conversation is chosen) -->
+      <div class="topic-selector hidden">
+        <h3 class="theme-title">Pick a Topic</h3>
+        <div class="topic-chips">
+          <button class="chip" data-topic="ai">✨ Let Me Find Out</button>
+          <button class="chip" data-topic="pokemons">⚡ Pokemons</button>
+          <button class="chip" data-topic="ninjago">🥷 Ninjago</button>
+          <button class="chip" data-topic="space">🚀 Space</button>
+          <button class="chip" data-topic="robots">🤖 Robots</button>
         </div>
       </div>
 
