--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
   <script src="shared/js/storage.js"></script>
   <script src="shared/js/supabase-sync.js"></script>
   <script src="shared/js/profile.js"></script>
+  <script src="shared/data/kindergarden.js"></script>
+  <script src="shared/data/grade1_data.js"></script>
+  <script src="shared/data/grade2_data.js"></script>
+  <script src="shared/data/grade3_data.js"></script>
+  <script src="shared/data/grade4_data.js"></script>
   <script src="shared/data/curriculum.js"></script>
   <script src="shared/js/curriculum.js"></script>
   <script src="shared/js/kid-skills.js"></script>
