--- a/games/voice-tutor/index.html
+++ b/games/voice-tutor/index.html
@@ -168,11 +168,11 @@
           <span class="stat-value session-duration-stat">0</span>
           <span class="stat-label">Minutes</span>
         </div>
-        <div class="stat">
-          <span class="stat-value session-focus-stat">—</span>
-          <span class="stat-label">Focus</span>
-        </div>
       </div>
+      <div class="session-review" id="sessionReview">
+        <!-- Dynamically populated: skill cards with rating, note -->
+      </div>
+      <p class="review-summary" id="reviewSummary"></p>
       <div class="complete-actions">
         <button class="btn btn-primary btn-large play-again-btn">🔄 Play Again</button>
         <button class="btn btn-secondary home-btn-complete">🏠 Home</button>
