fixed shop issues

--- a/games/mario-bros/index.html
+++ b/games/mario-bros/index.html
@@ -84,7 +84,7 @@
       <p class="shop-coins">🪙 <span class="shop-coin-count">0</span></p>
       <div class="shop-items"></div>
       <div class="shop-inventory">
-        <span class="shop-inv-label">Your Powers:</span>
+        <span class="shop-inv-label">Unlocked:</span>
         <span class="shop-inv-icons"></span>
       </div>
       <button class="btn btn-primary btn-large btn-start-level">Start Level ▶</button>
