--- a/games/unicorn-numbers/index.html
+++ b/games/unicorn-numbers/index.html
@@ -33,6 +33,18 @@
           <div class="mode-card-icon">אב</div>
           <div class="mode-card-label">Letters</div>
         </div>
+        <div class="card mode-card" data-mode="counting">
+          <div class="mode-card-icon">🔵</div>
+          <div class="mode-card-label">Counting</div>
+        </div>
+        <div class="card mode-card" data-mode="comparison">
+          <div class="mode-card-icon">⚖️</div>
+          <div class="mode-card-label">Bigger/Smaller</div>
+        </div>
+        <div class="card mode-card" data-mode="addition">
+          <div class="mode-card-icon">➕</div>
+          <div class="mode-card-label">Addition</div>
+        </div>
       </div>
     </div>
 
