--- a/games/pokemon-multiply/index.html
+++ b/games/pokemon-multiply/index.html
@@ -223,6 +223,7 @@
 
   <script src="pokemon-data.js"></script>
   <script src="levels.js"></script>
+  <script src="operation-modes.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
