--- a/games/pokemon-multiply/index.html
+++ b/games/pokemon-multiply/index.html
@@ -17,6 +17,7 @@
 
     <!-- SCREEN 1: Title -->
     <div class="screen title-screen active">
+      <button class="btn-back" onclick="window.location.href='../../index.html'" title="Home">🏠</button>
       <div class="title-pokemon">
         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png"
              alt="Pikachu" class="title-sprite">
@@ -27,6 +28,11 @@
       <div class="continue-wrapper" style="display: none;">
         <button class="btn btn-primary btn-continue">⚡ CONTINUE</button>
         <span class="continue-info"></span>
+      </div>
+      <div class="title-nav" style="display: none;">
+        <button class="btn btn-battle-nav">⚔️ Battle</button>
+        <button class="btn btn-shop-nav">🏪 Shop</button>
+        <button class="btn btn-collection-nav">📦 Collection</button>
       </div>
     </div>
 
