--- a/index.html
+++ b/index.html
@@ -43,10 +43,17 @@
 
     .game-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: var(--space-xl);
-      max-width: 900px;
+      max-width: 700px;
       width: 100%;
+    }
+
+    @media (max-width: 500px) {
+      .game-grid {
+        grid-template-columns: 1fr;
+        max-width: 340px;
+      }
     }
 
     .game-card {
