--- a/games/mario-bros/index.html
+++ b/games/mario-bros/index.html
@@ -78,6 +78,7 @@
       <p class="lc-powerup-preview"></p>
       <div style="display: flex; gap: var(--space-md); flex-wrap: wrap; justify-content: center;">
         <button class="btn btn-primary btn-large btn-next-level">▶ Next Level</button>
+        <button class="btn btn-primary btn-switch-char">🔄 Switch Character</button>
         <button class="btn btn-primary btn-home">🏠 Home</button>
       </div>
     </div>
