--- a/games/unicorn-numbers/index.html
+++ b/games/unicorn-numbers/index.html
@@ -23,6 +23,7 @@
     <div class="screen mode-select-screen active">
       <button class="btn-back" onclick="window.location.href='../../index.html'" title="Home">🏠</button>
       <button class="btn-lang btn-lang-mode" title="Switch language">EN 🇬🇧</button>
+      <span class="coin-badge coin-badge-mode">🪙 <span class="coin-count-mode">0</span></span>
       <div class="title-unicorn">🦄</div>
       <h2 class="mode-select-title">What do you want to learn?</h2>
       <div class="mode-cards">
@@ -47,6 +48,7 @@
           <div class="mode-card-label">Addition</div>
         </div>
       </div>
+      <button class="btn btn-primary btn-shop-mode">🏪 Shop</button>
     </div>
 
     <!-- ===== TITLE SCREEN ===== -->
@@ -79,6 +81,22 @@
       </div>
     </div>
 
+    <!-- ===== SHOP SCREEN ===== -->
+    <div class="screen shop-screen">
+      <button class="btn-back shop-back">←</button>
+      <div class="shop-header">
+        <h2 class="shop-title">Shop</h2>
+        <span class="coin-badge coin-badge-shop">🪙 <span class="coin-count-shop">0</span></span>
+      </div>
+      <div class="shop-tabs">
+        <button class="shop-tab active" data-tab="characters">🦄 Unicorns</button>
+        <button class="shop-tab" data-tab="accessories">👑 Outfits</button>
+        <button class="shop-tab" data-tab="trails">✨ Trails</button>
+        <button class="shop-tab" data-tab="themes">🎨 Themes</button>
+      </div>
+      <div class="shop-grid"></div>
+    </div>
+
     <!-- ===== GAME SCREEN ===== -->
     <div class="screen game-screen">
       <!-- HUD -->
@@ -91,6 +109,7 @@
           <div class="progress-fill" style="width: 0%"></div>
         </div>
         <div class="hud-group">
+          <span class="coin-counter">🪙 <span class="coin-count-hud">0</span></span>
           <span class="star-counter">⭐ 0</span>
           <button class="power-toggle" style="display: none;">🔥</button>
           <button class="btn-lang btn-lang-hud" title="Switch language">EN</button>
@@ -116,8 +135,10 @@
       <div class="level-complete-unicorn">🦄</div>
       <h2 class="level-complete-title">Level Complete!</h2>
       <div class="level-stars"></div>
+      <div class="lc-coins-earned">🪙 +0</div>
       <div style="display: flex; gap: var(--space-md); flex-wrap: wrap; justify-content: center;">
         <button class="btn btn-primary btn-large btn-next-level">▶ Next Level!</button>
+        <button class="btn btn-primary btn-shop-lc">🏪 Shop</button>
         <button class="btn btn-primary btn-home" onclick="window.location.href='../../index.html'">🏠 Home</button>
       </div>
     </div>
@@ -152,6 +173,7 @@
   <!-- Game JS -->
   <script src="modes.js"></script>
   <script src="levels.js"></script>
+  <script src="shop-data.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
