--- a/games/mario-bros/index.html
+++ b/games/mario-bros/index.html
@@ -70,6 +70,13 @@
       </div>
     </div>
 
+    <!-- ===== LEVEL SELECT ===== -->
+    <div class="screen level-select-screen">
+      <a class="btn-back" href="#">←</a>
+      <h2 class="ls-title">Select Level</h2>
+      <div class="ls-levels"></div>
+    </div>
+
     <!-- ===== LEVEL COMPLETE ===== -->
     <div class="screen level-complete-screen">
       <div class="lc-icon">🏁</div>
@@ -103,6 +110,7 @@
       <p class="go-score"></p>
       <div class="go-buttons">
         <button class="btn btn-primary btn-large btn-retry">🔄 Try Again</button>
+        <button class="btn btn-primary btn-go-levels">🗺️ Levels</button>
         <button class="btn btn-primary btn-home">🏠 Home</button>
       </div>
     </div>
