--- a/games/unicorn-numbers/index.html
+++ b/games/unicorn-numbers/index.html
@@ -168,6 +168,8 @@
   <script src="../../shared/js/supabase-sync.js"></script>
   <script src="../../shared/js/profile.js"></script>
   <script src="../../shared/js/adaptive.js"></script>
+  <script src="../../shared/js/shared-coins.js"></script>
+  <script src="../../shared/js/energy.js"></script>
   <script>Profile.autoInit();</script>
 
   <!-- Game JS -->
