--- a/games/pokemon-multiply/index.html
+++ b/games/pokemon-multiply/index.html
@@ -238,6 +238,8 @@
   <script src="../../shared/js/supabase-sync.js"></script>
   <script src="../../shared/js/profile.js"></script>
   <script src="../../shared/js/adaptive.js"></script>
+  <script src="../../shared/js/shared-coins.js"></script>
+  <script src="../../shared/js/energy.js"></script>
   <script>Profile.autoInit();</script>
 
   <script src="pokemon-data.js"></script>
