--- a/games/voice-tutor/index.html
+++ b/games/voice-tutor/index.html
@@ -185,6 +185,9 @@
   <script src="../../shared/js/audio.js"></script>
   <script src="../../shared/js/particles.js"></script>
   <script src="../../shared/js/storage.js"></script>
+  <script src="../../shared/js/profile.js"></script>
+  <script src="../../shared/js/shared-coins.js"></script>
+  <script src="../../shared/js/energy.js"></script>
 
   <!-- Game JS -->
   <script src="gemini-live.js"></script>
