--- a/games/mario-bros/index.html
+++ b/games/mario-bros/index.html
@@ -82,6 +82,7 @@
         <span class="energy-status-time">⚡ --</span>
         <span class="energy-status-coins">🪙 --</span>
       </div>
+      <div class="ls-world-tabs"></div>
       <div class="ls-levels"></div>
     </div>
 
