flying on cloud

--- a/games/mario-bros/index.html
+++ b/games/mario-bros/index.html
@@ -71,6 +71,11 @@
           <span class="char-name">Peach</span>
           <span class="char-stat">Can float while falling</span>
         </button>
+        <button class="card char-card" data-char="lakitu">
+          <canvas class="char-preview" width="64" height="64"></canvas>
+          <span class="char-name">Lakitu</span>
+          <span class="char-stat">Can fly on cloud</span>
+        </button>
       </div>
     </div>
 
@@ -172,6 +177,7 @@
         <span class="hud-powerup"></span>
         <span class="hud-skill"></span>
         <span class="hud-energy" style="display:none;"></span>
+        <div class="hud-fly" style="display:none"><div class="hud-fly-bar"></div></div>
       </div>
       <div class="hud-p2" style="display: none;">
         <span class="hud-p2-lives">💚💚💚</span>
