--- a/games/mario-bros/index.html
+++ b/games/mario-bros/index.html
@@ -89,6 +89,7 @@
       </div>
       <div class="ls-world-tabs"></div>
       <div class="ls-levels"></div>
+      <button class="btn btn-primary btn-ls-shop">🛒 Shop</button>
     </div>
 
     <!-- ===== LEVEL COMPLETE ===== -->
@@ -145,7 +146,7 @@
       <div class="energy-icon">⚡</div>
       <h2 class="energy-title">Out of Energy!</h2>
       <p class="energy-msg">Play math games to earn more time</p>
-      <p class="energy-earn-hint">Each session = +5 minutes</p>
+      <p class="energy-earn-hint">Each session = +2 minutes</p>
       <div class="energy-buttons">
         <button class="btn btn-primary btn-large btn-energy-edu">🎓 Play & Earn</button>
         <button class="btn btn-primary btn-energy-pin">🔑 Parent Code</button>
