--- a/games/voice-tutor/index.html
+++ b/games/voice-tutor/index.html
@@ -113,6 +113,7 @@
       <div class="connect-error hidden">
         <div class="connect-error-icon">📡</div>
         <p class="connect-error-text">Couldn't connect. Check your internet.</p>
+        <p class="connect-error-detail"></p>
         <div class="connect-error-actions">
           <button class="btn btn-primary retry-connect-btn">Retry</button>
           <button class="btn btn-secondary home-btn">Home</button>
