--- a/games/pokemon-multiply/index.html
+++ b/games/pokemon-multiply/index.html
@@ -160,6 +160,7 @@
           <span class="battle-eq">=</span>
           <span class="battle-answer-q">?</span>
         </div>
+        <div class="battle-timer-bar"><div class="battle-timer-fill"></div></div>
         <div class="battle-answers"></div>
       </div>
 
