--- a/index.html
+++ b/index.html
@@ -244,6 +244,14 @@
         description: 'Learn amazing facts about animals, space, science & more!',
         path: 'games/knowledge-tutor/index.html',
       },
+      {
+        id: 'sonic-dash',
+        title: 'Sonic Dash',
+        icon: '💎',
+        ages: 'Ages 6+',
+        description: 'Speed through zones as Sonic, Tails, Knuckles & more!',
+        path: 'games/sonic-dash/index.html',
+      },
     ];
 
     function renderGames() {
