Increase the vocabulary

--- a/index.html
+++ b/index.html
@@ -252,6 +252,14 @@
         description: 'Speed through zones as Sonic, Tails, Knuckles & more!',
         path: 'games/sonic-dash/index.html',
       },
+      {
+        id: 'space-words',
+        title: 'Space Words',
+        icon: '🪐',
+        ages: 'Ages 5+',
+        description: 'Explore planets and discover new English words!',
+        path: 'games/space-words/index.html',
+      },
     ];
 
     function renderGames() {
