--- a/games/voice-tutor/index.html
+++ b/games/voice-tutor/index.html
@@ -149,14 +149,14 @@
         <p class="prompt-text"></p>
       </div>
 
-      <!-- Mic indicator — tap-to-talk button -->
+      <!-- Mic indicator — passive listening indicator -->
       <div class="mic-area">
-        <button class="mic-indicator" type="button" aria-label="Tap to talk">
+        <div class="mic-indicator" aria-label="Listening">
           <div class="mic-ripple"></div>
           <div class="mic-ripple mic-ripple-2"></div>
           <div class="mic-icon">🎤</div>
-        </button>
-        <p class="mic-status">Tap to talk</p>
+        </div>
+        <p class="mic-status">Listening...</p>
       </div>
     </div>
 
